analysis/low-level-api-fir/testData/getOrBuildFir/invalidCode/setterWithoutBodyValueParameterType.kt
var prop: String = ""
    set(value: <expr>CharSequence</expr>)